# open-geospy

./: .gitignore  .modal.toml.example  README.md  config.py  docker-compose.yml  env.example  env_bootstrap.py  postchange_partial_summary.txt  pyproject.toml  requirements.txt
db/: postgres_database.py
docs/: retrieval_pipeline.md
eval/: README.md  __init__.py  build_locator_dataset.py  common.py  http_client.py  metrics.py  replay_scoring.py  run_locator.py  scrape_locator_dataset.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
scripts/: export_lancedb_snapshot.sh  export_pgvector_snapshot.sh  install_from_pgvector_snapshot.sh  modal.sh  rebuild_db.sh  sync_pgvector_to_lancedb.py
seeds/: downtown_sf_seeds.csv  one_seed.csv  seeds.csv  sf_city_seeds.csv  sf_lane_1.csv  sf_lane_2.csv  sf_lane_3.csv  sf_lane_4.csv  sf_lane_5.csv  sf_lane_6.csv  sf_lane_7.csv  sf_lane_8.csv  sf_top_x_interleaved.csv  south_sf_seeds.csv
tests/: conftest.py  test_eval_common.py  test_eval_metrics.py  test_locate_scoring.py  test_orb_rerank.py  test_runtime_env.py
utils/: audit_black_frames.py  backup_postgres.py  check_enrichment_missing.py  check_fill_candidates.py  eval_retrieval_locator.py  eval_retrieval_partials.py  index_capture_embeddings.py  index_vpr_embeddings.py  index_vpr_embeddings_modal.py  migrate_capture_embeddings_schema.py  migrate_sqlite_to_postgres.py  modal_volume_upload.py  prune_empty_locations.py  run_hard_negative_finetune_loop.py  seed_filter_roads.py  seed_grid.py  test_headless.py  test_modal.py  (+1 more)
(+48 files in other folders)
